# NeedlePrediction

./: README.md
Iceball_needle/: CMakeLists.txt
Iceball_needle/Iceball_needle/: CMakeLists.txt  Iceball_needle.py
Iceball_needle/Iceball_needle/Resources/UI/: Iceball_needle.ui
Needle_Iceball/: CMakeLists.txt  CryoTemplate-NeedleP.vtk
Needle_Iceball/Needle_Iceball2/: CMakeLists.txt  Needle_Iceball2.py  Needle_Iceball2_Eva_Laptop.py
Needle_Iceball/Needle_Iceball2/Resources/UI/: Needle_Iceball2.ui
Needle_Iceball/Needle_Iceball3/: CMakeLists.txt  Needle_Iceball3.py
Needle_Iceball/Needle_Iceball3/Resources/UI/: Needle_Iceball3.ui
